<resources>
    <string name="app_name">Unsplash</string>
    <string name="img_resource">Resource image</string>
    <string name="alt_description">Alt Description:</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_sample">Example</string>
    <string name="slug">Slug:</string>
    <string name="createdAt">Created At:</string>
    <string name="updatedAt">Updated At:</string>
    <string name="blurHash">Blur Hash:</string>
    <string name="width">Width:</string>
    <string name="height">Height:</string>
    <string name="color">Color:</string>
    <string name="likes">Number of likes:</string>
    <string name="image_details">Image Details</string>
    <string name="empty_list">No hay resultados para mostrar</string>
    <string name="allowed_digits">qwertyuiopasdfghjklzxcvbnmñ 1234567890 QWERTYUIOPASDFGHJKLZXCVBNMÑ</string>
</resources>